[gd_scene load_steps=7 format=3 uid="uid://57jkasyeg20j"]

[ext_resource type="Material" uid="uid://l2ciqqfnt4hm" path="res://src/ships/Stations/RandStationBlue/blue.tres" id="1_d2wjs"]
[ext_resource type="Script" path="res://src/ships/Stations/RandStationBlue/6-wayConnector.gd" id="1_y686v"]

[sub_resource type="CylinderMesh" id="CylinderMesh_j43o1"]
material = ExtResource("1_d2wjs")
top_radius = 5.0
bottom_radius = 5.0
height = 100.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_enmp1"]
points = PackedVector3Array(-5, -50, 0, -4.97651, -50, -0.490407, -4.97651, -50, 0.489429, -5, 50, 0, -4.90407, -50, -0.97592, -4.97651, 50, -0.490407, -4.90407, -50, 0.974941, -4.97651, 50, 0.489429, -4.78563, -50, -1.45164, -4.90407, 50, -0.97592, -4.78563, -50, 1.45067, -4.90407, 50, 0.974941, -4.6202, -50, -1.91366, -4.78563, 50, -1.45164, -4.6202, -50, 1.91269, -4.78563, 50, 1.45067, -4.40975, -50, -2.35709, -4.6202, 50, -1.91366, -4.40975, -50, 2.35611, -4.6202, 50, 1.91269, -4.15818, -50, -2.778, -4.40975, 50, -2.35709, -4.15818, -50, 2.77702, -4.40975, 50, 2.35611, -3.86551, -50, -3.17247, -4.15818, 50, -2.778, -3.86551, -50, 3.1715, -4.15818, 50, 2.77702, -3.53563, -50, -3.53563, -3.86551, 50, -3.17247, -3.53563, -50, 3.53465, -3.86551, 50, 3.1715, -3.17247, -50, -3.86551, -3.53563, 50, -3.53563, -3.17247, -50, 3.86453, -3.53563, 50, 3.53465, -2.778, -50, -4.15818, -3.17247, 50, -3.86551, -2.778, -50, 4.1572, -3.17247, 50, 3.86453, -2.35709, -50, -4.40975, -2.778, 50, -4.15818, -2.35709, -50, 4.40877, -2.778, 50, 4.1572, -1.91366, -50, -4.6202, -2.35709, 50, -4.40975, -1.91366, -50, 4.61922, -2.35709, 50, 4.40877, -1.45164, -50, -4.78563, -1.91366, 50, -4.6202, -1.45164, -50, 4.78465, -1.91366, 50, 4.61922, -0.97592, -50, -4.90407, -1.45164, 50, -4.78563, -0.97592, -50, 4.90309, -1.45164, 50, 4.78465, -0.490407, -50, -4.97651, -0.97592, 50, -4.90407, -0.490407, -50, 4.97553, -0.97592, 50, 4.90309, 0, -50, -5, -0.490407, 50, -4.97651, 0, -50, 5, -0.490407, 50, 4.97553, 0.489429, -50, -4.97651, 0, 50, -5, 0.489429, -50, 4.97553, 0, 50, 5, 0.974941, -50, -4.90407, 0.489429, 50, -4.97651, 0.974941, -50, 4.90309, 0.489429, 50, 4.97553, 1.45067, -50, -4.78563, 0.974941, 50, -4.90407, 1.45067, -50, 4.78465, 0.974941, 50, 4.90309, 1.91269, -50, -4.6202, 1.45067, 50, -4.78563, 1.91269, -50, 4.61922, 1.45067, 50, 4.78465, 2.35611, -50, -4.40975, 1.91269, 50, -4.6202, 2.35611, -50, 4.40877, 1.91269, 50, 4.61922, 2.77702, -50, -4.15818, 2.35611, 50, -4.40975, 2.77702, -50, 4.1572, 2.35611, 50, 4.40877, 3.1715, -50, -3.86551, 2.77702, 50, -4.15818, 3.1715, -50, 3.86453, 2.77702, 50, 4.1572, 3.53465, -50, -3.53563, 3.1715, 50, -3.86551, 3.53465, -50, 3.53465, 3.1715, 50, 3.86453, 3.86453, -50, -3.17247, 3.53465, 50, -3.53563, 3.86453, -50, 3.1715, 3.53465, 50, 3.53465, 4.1572, -50, -2.778, 3.86453, 50, -3.17247, 4.1572, -50, 2.77702, 3.86453, 50, 3.1715, 4.40877, -50, -2.35709, 4.1572, 50, -2.778, 4.40877, -50, 2.35611, 4.1572, 50, 2.77702, 4.61922, -50, -1.91366, 4.40877, 50, -2.35709, 4.61922, -50, 1.91269, 4.40877, 50, 2.35611, 4.78465, -50, -1.45164, 4.61922, 50, -1.91366, 4.78465, -50, 1.45067, 4.61922, 50, 1.91269, 4.90309, -50, -0.97592, 4.78465, 50, -1.45164, 4.90309, -50, 0.974941, 4.78465, 50, 1.45067, 4.97553, -50, -0.490407, 4.90309, 50, -0.97592, 4.97553, -50, 0.489429, 4.90309, 50, 0.974941, 5, -50, 0, 4.97553, 50, -0.490407, 4.97553, 50, 0.489429, 5, 50, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_27oko"]
points = PackedVector3Array(-5, -50, 0, -4.97651, -50, -0.490407, -4.97651, -50, 0.489429, -5, 50, 0, -4.90407, -50, -0.97592, -4.97651, 50, -0.490407, -4.90407, -50, 0.974941, -4.97651, 50, 0.489429, -4.78563, -50, -1.45164, -4.90407, 50, -0.97592, -4.78563, -50, 1.45067, -4.90407, 50, 0.974941, -4.6202, -50, -1.91366, -4.78563, 50, -1.45164, -4.6202, -50, 1.91269, -4.78563, 50, 1.45067, -4.40975, -50, -2.35709, -4.6202, 50, -1.91366, -4.40975, -50, 2.35611, -4.6202, 50, 1.91269, -4.15818, -50, -2.778, -4.40975, 50, -2.35709, -4.15818, -50, 2.77702, -4.40975, 50, 2.35611, -3.86551, -50, -3.17247, -4.15818, 50, -2.778, -3.86551, -50, 3.1715, -4.15818, 50, 2.77702, -3.53563, -50, -3.53563, -3.86551, 50, -3.17247, -3.53563, -50, 3.53465, -3.86551, 50, 3.1715, -3.17247, -50, -3.86551, -3.53563, 50, -3.53563, -3.17247, -50, 3.86453, -3.53563, 50, 3.53465, -2.778, -50, -4.15818, -3.17247, 50, -3.86551, -2.778, -50, 4.1572, -3.17247, 50, 3.86453, -2.35709, -50, -4.40975, -2.778, 50, -4.15818, -2.35709, -50, 4.40877, -2.778, 50, 4.1572, -1.91366, -50, -4.6202, -2.35709, 50, -4.40975, -1.91366, -50, 4.61922, -2.35709, 50, 4.40877, -1.45164, -50, -4.78563, -1.91366, 50, -4.6202, -1.45164, -50, 4.78465, -1.91366, 50, 4.61922, -0.97592, -50, -4.90407, -1.45164, 50, -4.78563, -0.97592, -50, 4.90309, -1.45164, 50, 4.78465, -0.490407, -50, -4.97651, -0.97592, 50, -4.90407, -0.490407, -50, 4.97553, -0.97592, 50, 4.90309, 0, -50, -5, -0.490407, 50, -4.97651, 0, -50, 5, -0.490407, 50, 4.97553, 0.489429, -50, -4.97651, 0, 50, -5, 0.489429, -50, 4.97553, 0, 50, 5, 0.974941, -50, -4.90407, 0.489429, 50, -4.97651, 0.974941, -50, 4.90309, 0.489429, 50, 4.97553, 1.45067, -50, -4.78563, 0.974941, 50, -4.90407, 1.45067, -50, 4.78465, 0.974941, 50, 4.90309, 1.91269, -50, -4.6202, 1.45067, 50, -4.78563, 1.91269, -50, 4.61922, 1.45067, 50, 4.78465, 2.35611, -50, -4.40975, 1.91269, 50, -4.6202, 2.35611, -50, 4.40877, 1.91269, 50, 4.61922, 2.77702, -50, -4.15818, 2.35611, 50, -4.40975, 2.77702, -50, 4.1572, 2.35611, 50, 4.40877, 3.1715, -50, -3.86551, 2.77702, 50, -4.15818, 3.1715, -50, 3.86453, 2.77702, 50, 4.1572, 3.53465, -50, -3.53563, 3.1715, 50, -3.86551, 3.53465, -50, 3.53465, 3.1715, 50, 3.86453, 3.86453, -50, -3.17247, 3.53465, 50, -3.53563, 3.86453, -50, 3.1715, 3.53465, 50, 3.53465, 4.1572, -50, -2.778, 3.86453, 50, -3.17247, 4.1572, -50, 2.77702, 3.86453, 50, 3.1715, 4.40877, -50, -2.35709, 4.1572, 50, -2.778, 4.40877, -50, 2.35611, 4.1572, 50, 2.77702, 4.61922, -50, -1.91366, 4.40877, 50, -2.35709, 4.61922, -50, 1.91269, 4.40877, 50, 2.35611, 4.78465, -50, -1.45164, 4.61922, 50, -1.91366, 4.78465, -50, 1.45067, 4.61922, 50, 1.91269, 4.90309, -50, -0.97592, 4.78465, 50, -1.45164, 4.90309, -50, 0.974941, 4.78465, 50, 1.45067, 4.97553, -50, -0.490407, 4.90309, 50, -0.97592, 4.97553, -50, 0.489429, 4.90309, 50, 0.974941, 5, -50, 0, 4.97553, 50, -0.490407, 4.97553, 50, 0.489429, 5, 50, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_pnwhl"]
points = PackedVector3Array(-5, -50, 0, -4.97651, -50, -0.490407, -4.97651, -50, 0.489429, -5, 50, 0, -4.90407, -50, -0.97592, -4.97651, 50, -0.490407, -4.90407, -50, 0.974941, -4.97651, 50, 0.489429, -4.78563, -50, -1.45164, -4.90407, 50, -0.97592, -4.78563, -50, 1.45067, -4.90407, 50, 0.974941, -4.6202, -50, -1.91366, -4.78563, 50, -1.45164, -4.6202, -50, 1.91269, -4.78563, 50, 1.45067, -4.40975, -50, -2.35709, -4.6202, 50, -1.91366, -4.40975, -50, 2.35611, -4.6202, 50, 1.91269, -4.15818, -50, -2.778, -4.40975, 50, -2.35709, -4.15818, -50, 2.77702, -4.40975, 50, 2.35611, -3.86551, -50, -3.17247, -4.15818, 50, -2.778, -3.86551, -50, 3.1715, -4.15818, 50, 2.77702, -3.53563, -50, -3.53563, -3.86551, 50, -3.17247, -3.53563, -50, 3.53465, -3.86551, 50, 3.1715, -3.17247, -50, -3.86551, -3.53563, 50, -3.53563, -3.17247, -50, 3.86453, -3.53563, 50, 3.53465, -2.778, -50, -4.15818, -3.17247, 50, -3.86551, -2.778, -50, 4.1572, -3.17247, 50, 3.86453, -2.35709, -50, -4.40975, -2.778, 50, -4.15818, -2.35709, -50, 4.40877, -2.778, 50, 4.1572, -1.91366, -50, -4.6202, -2.35709, 50, -4.40975, -1.91366, -50, 4.61922, -2.35709, 50, 4.40877, -1.45164, -50, -4.78563, -1.91366, 50, -4.6202, -1.45164, -50, 4.78465, -1.91366, 50, 4.61922, -0.97592, -50, -4.90407, -1.45164, 50, -4.78563, -0.97592, -50, 4.90309, -1.45164, 50, 4.78465, -0.490407, -50, -4.97651, -0.97592, 50, -4.90407, -0.490407, -50, 4.97553, -0.97592, 50, 4.90309, 0, -50, -5, -0.490407, 50, -4.97651, 0, -50, 5, -0.490407, 50, 4.97553, 0.489429, -50, -4.97651, 0, 50, -5, 0.489429, -50, 4.97553, 0, 50, 5, 0.974941, -50, -4.90407, 0.489429, 50, -4.97651, 0.974941, -50, 4.90309, 0.489429, 50, 4.97553, 1.45067, -50, -4.78563, 0.974941, 50, -4.90407, 1.45067, -50, 4.78465, 0.974941, 50, 4.90309, 1.91269, -50, -4.6202, 1.45067, 50, -4.78563, 1.91269, -50, 4.61922, 1.45067, 50, 4.78465, 2.35611, -50, -4.40975, 1.91269, 50, -4.6202, 2.35611, -50, 4.40877, 1.91269, 50, 4.61922, 2.77702, -50, -4.15818, 2.35611, 50, -4.40975, 2.77702, -50, 4.1572, 2.35611, 50, 4.40877, 3.1715, -50, -3.86551, 2.77702, 50, -4.15818, 3.1715, -50, 3.86453, 2.77702, 50, 4.1572, 3.53465, -50, -3.53563, 3.1715, 50, -3.86551, 3.53465, -50, 3.53465, 3.1715, 50, 3.86453, 3.86453, -50, -3.17247, 3.53465, 50, -3.53563, 3.86453, -50, 3.1715, 3.53465, 50, 3.53465, 4.1572, -50, -2.778, 3.86453, 50, -3.17247, 4.1572, -50, 2.77702, 3.86453, 50, 3.1715, 4.40877, -50, -2.35709, 4.1572, 50, -2.778, 4.40877, -50, 2.35611, 4.1572, 50, 2.77702, 4.61922, -50, -1.91366, 4.40877, 50, -2.35709, 4.61922, -50, 1.91269, 4.40877, 50, 2.35611, 4.78465, -50, -1.45164, 4.61922, 50, -1.91366, 4.78465, -50, 1.45067, 4.61922, 50, 1.91269, 4.90309, -50, -0.97592, 4.78465, 50, -1.45164, 4.90309, -50, 0.974941, 4.78465, 50, 1.45067, 4.97553, -50, -0.490407, 4.90309, 50, -0.97592, 4.97553, -50, 0.489429, 4.90309, 50, 0.974941, 5, -50, 0, 4.97553, 50, -0.490407, 4.97553, 50, 0.489429, 5, 50, 0)

[node name="dock1" type="Node3D"]
script = ExtResource("1_y686v")

[node name="Tube1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)
mesh = SubResource("CylinderMesh_j43o1")
skeleton = NodePath("")

[node name="dock2" type="Node3D" parent="Tube1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)
shape = SubResource("ConvexPolygonShape3D_enmp1")

[node name="Tube2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 50, 0)
mesh = SubResource("CylinderMesh_j43o1")
skeleton = NodePath("")

[node name="dock1" type="Node3D" parent="Tube2"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, -50, 0)

[node name="dock2" type="Node3D" parent="Tube2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 50, 0)
shape = SubResource("ConvexPolygonShape3D_27oko")

[node name="Tube3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 50, 0)
mesh = SubResource("CylinderMesh_j43o1")
skeleton = NodePath("")

[node name="dock1" type="Node3D" parent="Tube3"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 8.74228e-08, -1, 8.74228e-08, -3.82137e-15, 8.74228e-08, 1, 1.79995e-19, -50, 0)

[node name="dock2" type="Node3D" parent="Tube3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 50, 0)
shape = SubResource("ConvexPolygonShape3D_pnwhl")
